# django-sp-admin

./: .gitignore  .pre-commit-config.yaml  README.md
.djdevx/: config.toml
backend/: .gitignore  Dockerfile  pdm_build.py  pyproject.toml
backend/admin_test/: admin.py  apps.py  factories.py  models.py  urls.py  views.py
backend/admin_test/management/commands/: blog.py  load_dummy_data.py
backend/admin_test/migrations/: 0001_initial.py  0002_eventlog_eventschedule_poll.py  0003_booleantestmodel_choicetestmodel_and_more.py
backend/django_sp_admin/: apps.py  urls.py  views.py
backend/django_sp_admin/templates/admin/: _notification.html  _tw_dark_mode.html  _user_app_list.html  _user_profile_dialog.html  action.html  app_index.html  base.html  base_site.html  change_form.html  change_form_object_tools.html  change_list.html  change_list_object_tools.html  change_list_results.html  date_hierarchy.html  delete_confirmation.html  delete_selected_confirmation.html  filter.html  index.html  login.html  pagination.html  search_form.html  submit_line.html
backend/django_sp_admin/templates/registration/: logged_out.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
backend/django_sp_admin/templatetags/: admin_system_info.py  django_sp_admin.py  django_sp_admin_filters.py
backend/settings/apps/: admin_test.py  django_sp_admin.py
backend/settings/utils/: env.py
backend/static/js/: starting-point-ui.min.js
backend/static/js/django_sp_admin/: change_list.js  datepicker.js  starting-point-ui.min.js  timepicker.js
backend/tailwind/src/css/: input.css  starting-point-ui.min.css
backend/templates/: _base.html
backend/urls/apps/: admin_test.py  django_sp_admin.py
backend/urls/django/: admin.py
(+13 files in other folders)
