[project]
name = "django-sp-admin"
version = "0.1.0"
description = "Starting point UI for Django admin"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "django~=6.0.0",
    "django-environ>=0.13.0",
    "django-redis>=6.0.0",
    "django-tailwind-cli>=4.5.1",
    "django-typer>=3.7.1",
    "ipdb>=0.13.13",
    "ipython>=9.12.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "djade>=1.9.0",
    "django-browser-reload>=1.21.0",
    "django-debug-toolbar>=6.3.0",
    "django-upgrade>=1.30.0",
    "factory-boy>=3.3.3",
    "pre-commit>=4.5.1",
    "rich>=14.3.3",
    "ruff>=0.15.9",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["django_sp_admin/"]
source-includes = [
    "admin_test",
    "applications",
    "settings",
    "static",
    "tailwind",
    "templates",
    "urls",
    "users",
    "manage.py",
    "pdm_build.py",
    "README.md",
    "uv.lock"
]
